I made changes to the listdevices activity

--- a/app/src/main/res/layout/activity_list_devices.xml
+++ b/app/src/main/res/layout/activity_list_devices.xml
@@ -33,4 +33,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+   <TextView
+       android:id="@+id/MessageTextDialog"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:visibility="gone"
+       android:textSize="18sp"
+       android:gravity="center"
+       android:padding="16dp"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintStart_toStartOf="parent"
+       app:layout_constraintEnd_toEndOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
