I changed the default theme and the text on the buttons

--- a/app/src/main/res/layout/activity_list_devices.xml
+++ b/app/src/main/res/layout/activity_list_devices.xml
@@ -37,7 +37,7 @@
        android:id="@+id/MessageTextDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:visibility="gone"
+       android:visibility="visible"
        android:textSize="18sp"
        android:gravity="center"
        android:padding="16dp"
