--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.EchoPoint" parent="Theme.AppCompat.Light.NoActionBar" />
+    <style name="Theme.EchoPoint" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="buttonStyle">@style/GlobalButtonStyle</item>
+        <item name="android:windowBackground">@color/black</item>
+        <item name="android:textViewStyle">@style/CustomTextViewStyle</item>
+    </style>
 
     <style name="Theme.EchoPoint.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
+        <item name="buttonStyle">@style/GlobalButtonStyle</item>
+        <item name="android:windowBackground">@color/black</item>
     </style>
 
     <style name="Theme.EchoPoint.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
