--- a/app/src/main/res/layout/activity_list_devices.xml
+++ b/app/src/main/res/layout/activity_list_devices.xml
@@ -6,6 +6,16 @@
     android:layout_height="match_parent"
     tools:context=".ListDevices">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/ListDevicesAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    </com.google.android.material.appbar.AppBarLayout>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultScannerDevices"
