--- a/app/src/main/res/layout/activity_scan_and_communication_selected_device.xml
+++ b/app/src/main/res/layout/activity_scan_and_communication_selected_device.xml
@@ -7,6 +7,17 @@
     android:layout_height="match_parent"
     tools:context=".ScanAndCommunicationSelectedDevice">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent">
+        <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/ScaningCommunicationAppBar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>
+    </com.google.android.material.appbar.AppBarLayout>
+
     <TextView
         android:id="@+id/MessageText"
         android:layout_width="302dp"
