--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,4 +10,14 @@
         <item name="android:textColor">@color/white</item>
     </style>
 
+    <style name="CustomAppBarStyle" parent="Widget.MaterialComponents.AppBarLayout.Primary">
+    <item name="android:background">@color/background_color_appbar</item>
+    </style>
+
+    <style name="CustomToolbarStyle" parent="Widget.MaterialComponents.Toolbar">
+        <item name="android:background">@color/background_color_appbar</item>
+        <item name="titleTextColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
 </resources>
