--- a/app/src/main/res/layout/activity_list_devices.xml
+++ b/app/src/main/res/layout/activity_list_devices.xml
@@ -19,11 +19,10 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/resultScannerDevices"
-        android:layout_width="361dp"
-        android:layout_height="610dp"
-
+        android:layout_width="376dp"
+        android:layout_height="548dp"
         android:layout_marginStart="25dp"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="?attr/actionBarSize"
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="91dp"
         android:orientation="vertical"
@@ -43,16 +42,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
-   <TextView
-       android:id="@+id/MessageTextDialog"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:visibility="visible"
-       android:textSize="18sp"
-       android:gravity="center"
-       android:padding="16dp"
-       app:layout_constraintTop_toTopOf="parent"
-       app:layout_constraintStart_toStartOf="parent"
-       app:layout_constraintEnd_toEndOf="parent" />
+    <TextView
+        android:id="@+id/MessageTextDialog"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="72dp"
+        android:gravity="center"
+        android:padding="16dp"
+        android:textSize="18sp"
+        android:visibility="visible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.474"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
